[package]
name = "blurhash-generator"
version = "0.1.0"
edition = "2021"
authors = ["Hakko <hakko@seoulcomix.com>"]
description = "Generate blurhash for a folder of images"

[dependencies]
blurhash = "0.2.3"
image = "0.25.2"
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0.140"
